# sea_sim

./: .gitignore  CMakeLists.txt  README.MD  build.bat  build.sh
docs/: interface.md  modules.md
include/sea_sim/gears/: blocking_queue.hpp  channel_packet.h  channels.hpp  gears.hpp  task.hpp  thread_pool.hpp
include/sea_sim/gui_controller/: FileDialog.h  Fonts.h  Functions.h  GUI.h  GraphicsStorage.h  ModuleDialog.h  ModulePageStorage.h  RenderEngine.h  WindowStorage.h  functions.h  window_storage.h
include/sea_sim/interconnect/: interconnect.h  interconnect_share.h
include/sea_sim/module_controller/: module_controller.h
include/sea_sim/object_showcase/: object_showcase.h  toolkit.h
include/sea_sim/toolkit/controllers/: mouse.hpp
include/sea_sim/toolkit/geom/: algorithms.hpp  geom.hpp  polygon.hpp  reorderable_view.hpp  vector.hpp
include/sea_sim/toolkit/graphics/: color.hpp
include/sea_sim/toolkit/object_showcase/: object_showcase.h
misc/: input_interface.json
modules/: CMakeLists.txt
modules/general_modules/: CMakeLists.txt
modules/general_modules/mouse_controller_module/src/: mouse_controller_module.cpp
modules/general_modules/ship_info_out_module/src/: ship_info_out_module.cpp
modules/general_modules/ship_move_module/src/: ship_move_module.cpp
modules/general_modules/ship_render_module/src/: ship_render_module.cpp
modules/general_modules/ship_spawner_module/src/: ship_spawner_module.cpp
modules/module_1/src/: module_1.cpp
modules/module_2/src/: module_2.cpp
modules/module_3/src/: module_3.cpp
modules/mouse_controller_module/src/: mouse_controller_module.cpp
modules/move_module/src/: move_module.cpp
modules/render_module/src/: render_module.cpp
modules/ship_info_out_module/src/: ship_info_out_module.cpp
modules/ship_spawner_module/src/: ship_spawner_module.cpp
modules/task_modules/: CMakeLists.txt
modules/task_modules/ship_router_module/src/: chaser_task.hpp  ship_router_module.cpp
src/sea_sim/core/: core.cpp
src/sea_sim/gears/: thread_pool.cpp
src/sea_sim/gui_controller/: FileDialog.cpp  Functions.cpp  GUI.cpp  GraphicsStorage.cpp  ModuleDialog.cpp  ModulePageStorage.cpp  RenderEngine.cpp  WindowStorage.cpp  functions.cpp  main.cpp.bak  window_storage.cpp
src/sea_sim/interconnect/: interconnect.cpp
src/sea_sim/object_showcase/: object_showcase.cpp
src/sea_sim/toolkit/object_showcase/: object_showcase.cpp
